--- a/GeaWebMVC/Views/Autentication/Login.cshtml
+++ b/GeaWebMVC/Views/Autentication/Login.cshtml
@@ -1,54 +1,29 @@
-﻿@model GeaWebMVC.Models.Operador
+﻿@model GeaWebMVC.Models.User
 
 @{
     ViewBag.Title = "Login";
 }
 
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
+    <div id="containerLogin" class="col-md-4 col-md-offset-3 ">
+        <form class="form-signin">
+            <h2 class="form-signin-heading">Login</h2>
+            <label for="inputEmail" class="sr-only">Usuario</label>
 
-<div class="col-lg-6" align="center" >
+            @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control", @placeholder = "Usuário" } })
+            @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
 
+            <label for="inputPassword" class="sr-only">Senha</label>
+            @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", @id = "inputPassword", @placeholder = "Senha" } })
+            @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
 
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="form-horizontal">
-            <h4 class=" col-md-offset-3 col-md-10">Login</h4>
-           
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Login, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Senha, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-3 col-md-10">
-                    <input type="submit" value="Logar" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
-    }
-
-    <div>
-        @Html.ActionLink("Back to List", "Index")
+            <button id="btnlogar" class="btn btn-lg btn-primary btn-block" type="submit">Logar</button>
+        </form>
     </div>
-
-</div>
+}
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
