--- a/GeaWebMVC/Views/Autentication/_LayoutLogin.cshtml
+++ b/GeaWebMVC/Views/Autentication/_LayoutLogin.cshtml
@@ -8,12 +8,10 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    
+    <div class="container">
         @RenderBody()
-    
+    </div>
         
-    
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
