--- a/GeaWebMVC/Views/Faturamento/Create.cshtml
+++ b/GeaWebMVC/Views/Faturamento/Create.cshtml
@@ -11,7 +11,7 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
+    <div class="form-horizontal col-md-8 col-md-offset-2">
         <h4>Faturamento</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -33,8 +33,8 @@
                
         
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-md-offset-6 col-md-2">
+                <input type="submit" value="Create" class="btn btn-lg btn-primary" />
             </div>
         </div>
     </div>
