--- a/GeaWebMVC/Views/Shared/_Layout.cshtml
+++ b/GeaWebMVC/Views/Shared/_Layout.cshtml
@@ -36,8 +36,21 @@
             </div>
         </div>
     </div>
-    <div class="container body-content col-lg-12 col-md-12"  align="center">
-        @RenderBody()
+
+    <div class="container">
+        <div>
+            <ul class="nav nav-pills row col-md-8 col-md-offset-1 ">
+                <li>@Html.ActionLink("Operador", "Index", "Operador")</li>
+                <li>@Html.ActionLink("Perfil", "Index", "Perfil")</li>
+                <li>@Html.ActionLink("Empresa", "Index", "Empresa")</li>
+                <li>@Html.ActionLink("Faturamento", "Index", "Faturamento")</li>
+                <li>@Html.ActionLink("RegistroDeFluxo", "Index", "RegistroDeFluxo")</li>
+                <li>@Html.ActionLink("Menu Registro de Fluxo", "MenuRegistroDeFluxo", "RegistroDeFluxo")</li>
+            </ul>
+        </div>
+        <div class="row">
+            @RenderBody()
+        </div>
         <hr />
         <footer>
            
