--- a/GeaWebMVC/Views/Empresa/Create.cshtml
+++ b/GeaWebMVC/Views/Empresa/Create.cshtml
@@ -4,16 +4,13 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
-
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-<div class=" forform-horizontal col-md-8 col-md-offset-2">
+<div class=" form-horizontal col-md-8 col-md-offset-2">
 
-    <h2 class="form-signin-heading">Cadstrar Empresa</h2>
+    <h2 class=" head-form form-signin-heading">Cadstrar Empresa</h2>
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
