--- a/GeaWebMVC/Views/Empresa/Details.cshtml
+++ b/GeaWebMVC/Views/Empresa/Details.cshtml
@@ -4,10 +4,8 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>Empresa</h4>
+<div class="form-details col-md-6 col-md-offset-4">
+    <h2>Empresa</h2>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -35,8 +33,10 @@
         </dd>
 
     </dl>
+    <div class="col-md-3 col-md-offset-2">
+        @Html.ActionLink("Editar", "Edit", new { id = Model.Id }, new { @class = "btn btn-primary " })
+        @Html.ActionLink("Excluir", "Delete", new { id = Model.Id }, new { @class = "btn btn-primary " })
+        
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
