--- a/GeaWebMVC/Views/Faturamento/Create.cshtml
+++ b/GeaWebMVC/Views/Faturamento/Create.cshtml
@@ -4,45 +4,39 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
-
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal col-md-8 col-md-offset-2">
-        <h4>Faturamento</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.EmpresaId, "Cliente", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("EmpresaId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.EmpresaId, "", new { @class = "text-danger" })
+        <h2 class=" head-form form-signin-heading">Gerar Faturamento</h2>
+            
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.EmpresaId, "Cliente", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("EmpresaId", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.EmpresaId, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DataCompetencia, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DataCompetencia, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DataCompetencia, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.Label("Mês  ", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.DataCompetencia, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.DataCompetencia, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
-               
-        
-        <div class="form-group">
-            <div class="col-md-offset-6 col-md-2">
-                <input type="submit" value="Create" class="btn btn-lg btn-primary" />
+
+
+            <div class="form-group">
+                <div class="col-md-offset-6 col-md-2">
+                    <input type="submit" value="Gerar" class="btn btn-lg btn-primary" />
+                </div>
             </div>
-        </div>
-    </div>
+</div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
