--- a/GeaWebMVC/Views/Operador/Edit.cshtml
+++ b/GeaWebMVC/Views/Operador/Edit.cshtml
@@ -4,15 +4,12 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
-
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Operador</h4>
+        <h2>Editar Operador</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
