--- a/GeaWebMVC/Views/RegistroDeFluxo/Create.cshtml
+++ b/GeaWebMVC/Views/RegistroDeFluxo/Create.cshtml
@@ -4,15 +4,13 @@
     ViewBag.Title = "RegistrarEntrada";
 }
 
-<h2>Registra Entrada</h2>
-
 
 @using (Html.BeginForm("Create","RegistroDeFluxo")) 
 {
     @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    
+
+<div class="form-horizontal col-md-8 col-md-offset-2">
+    <h2 class=" head-form form-signin-heading">Registra Entrada</h2>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -58,16 +56,14 @@
 
 
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+        <div class="col-md-offset-6 col-md-2">
+            <input type="submit" value="Registrar" class="btn btn-lg btn-primary" />
         </div>
     </div>
 </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
