--- a/GeaWebMVC/Views/RegistroDeFluxo/Details.cshtml
+++ b/GeaWebMVC/Views/RegistroDeFluxo/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Detalis";
 }
 
-<h2>Detalis</h2>
 
-<div>
-    <h4>RegistroDeFluxo</h4>
+<div class="form-details col-md-6 col-md-offset-4">
+    <h2>RegistroDeFluxo</h2>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -75,8 +74,8 @@
         </dd>
 
     </dl>
+    <div>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "btn btn-primary " })
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
