--- a/GeaWebMVC/Views/RegistroDeFluxo/MenuRegistroDeFluxo.cshtml
+++ b/GeaWebMVC/Views/RegistroDeFluxo/MenuRegistroDeFluxo.cshtml
@@ -1,27 +1,34 @@
 ﻿
 @{
-    ViewBag.Title = "Menu Registro de fluxo Fluxo";
+    ViewBag.Title = "Menu Registro de Fluxo";
 }
-<div align="center">
 
 
-    <h2>Menu Registro de fluxo Fluxo</h2>
+<div id="menuRegistroDeFluxo" class="row">
+    <h2 class="col-md-6 col-md-offset-4">Menu Registro de Fluxo</h2>
 
-    <div class=" containerMenu form-group">
+
+    <div class="col-md-6 col-md-offset-4" id="codigo-registro">
+
         @if (@ViewBag.RegistroDeFluxoId != null)
         {
-            <div class="col-md-1">
-                @Html.Label("RegistroDeFluxoId", "Código Registro", htmlAttributes: new { @class = "control-label col-md-2" })
-                <span>@ViewBag.RegistroDeFluxoId</span>
-            </div>
+            <h2>Código Registro : 25 @ViewBag.RegistroDeFluxoId</h2>
         }
+    </div>
 
 
-        <div  class=" menuRegistroButton col-lg-6" align="center" >
-            @Html.ActionLink("Nova Entrada", "Create", "RegistroDeFluxo",new { @class= "btn btn-primary"})            
+    <div class="row col-md-8 col-md-offset-4">
+
+        <div class=" menuRegistroButton col-md-3">
+            @Html.ActionLink("Nova Entrada", "Create", "RegistroDeFluxo", new { @class = "btn btn-primary btn-lg" })
         </div>
-        <div class=" menuRegistroButton col-lg-6" align="center">            
-            @Html.ActionLink("Registrar Saída", "FindCodigoRegistro", "RegistroDeFluxo", new { @class = "btn btn-primary" })
+        <div class=" menuRegistroButton col-md-3">
+            @Html.ActionLink("Registrar Saída", "FindCodigoRegistro", "RegistroDeFluxo", new { @class = "btn btn-primary btn-lg " })
         </div>
+
     </div>
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
