--- a/GeaWebMVC/Views/Shared/_Layout.cshtml
+++ b/GeaWebMVC/Views/Shared/_Layout.cshtml
@@ -16,21 +16,53 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("G.E.A Web", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("G.E.A Web", "MenuRegistroDeFluxo", "RegistroDeFluxo", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    @if(User.Identity?.Name.Split('|')?[1] == "Administrador")
+                    {
+                                            
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Operador <span class="caret"></span></a>
+                            <ul class="dropdown-menu">                           
+                                <li>@Html.ActionLink("Listar", "Index", "Operador")</li>
+                                <li role="separator" class="divider"></li>
+                                <li>@Html.ActionLink("Cadastrar", "Create", "Operador")</li>
+                            
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Empresa <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Listrar", "Index", "Empresa")</li>
+                                <li role="separator" class="divider"></li>
+                                <li>@Html.ActionLink("Cadastrar", "Create", "Empresa")</li>
 
-                    <li>@Html.ActionLink("Operador", "Index", "Operador")</li>
-                    <li>@Html.ActionLink("Perfil", "Index", "Perfil")</li>
-                    <li>@Html.ActionLink("Empresa", "Index", "Empresa")</li>
-                    <li>@Html.ActionLink("Faturamento", "Index", "Faturamento")</li>
-                    <li>@Html.ActionLink("RegistroDeFluxo", "Index", "RegistroDeFluxo")</li>
-                    <li>@Html.ActionLink("Menu Registro de Fluxo", "MenuRegistroDeFluxo", "RegistroDeFluxo")</li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Faturamento <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Listrar", "Index", "Faturamento")</li>
+                                <li role="separator" class="divider"></li>
+                                <li>@Html.ActionLink("Gerar", "Create", "Faturamento")</li>
 
+                            </ul>
+                        </li>
+                    }
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Registro de Fluxo <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                          
+                            <li>@Html.ActionLink("Listar", "Index", "RegistroDeFluxo")</li>
+                            <li role="separator" class="divider"></li>
+                            <li>@Html.ActionLink("Menu Registro de Fluxo", "MenuRegistroDeFluxo", "RegistroDeFluxo")</li>
 
+                        </ul>
+                    </li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right">                    
+                <ul class="nav navbar-nav navbar-right ">                    
                     <li>@Html.ActionLink("LogOut", "LogOut", "Autentication",null, new { @class = "glyphicon glyphicon-log-out" })</li>
                 </ul>
             </div>
@@ -38,17 +70,8 @@
     </div>
 
     <div class="container">
-        <div>
-            <ul class="nav nav-pills row col-md-8 col-md-offset-1 ">
-                <li>@Html.ActionLink("Operador", "Index", "Operador")</li>
-                <li>@Html.ActionLink("Perfil", "Index", "Perfil")</li>
-                <li>@Html.ActionLink("Empresa", "Index", "Empresa")</li>
-                <li>@Html.ActionLink("Faturamento", "Index", "Faturamento")</li>
-                <li>@Html.ActionLink("RegistroDeFluxo", "Index", "RegistroDeFluxo")</li>
-                <li>@Html.ActionLink("Menu Registro de Fluxo", "MenuRegistroDeFluxo", "RegistroDeFluxo")</li>
-            </ul>
-        </div>
-        <div class="row">
+        
+        <div class="row">            
             @RenderBody()
         </div>
         <hr />
