Incluído algumas classes.

--- a/GeaWebMVC/Views/Empresa/Delete.cshtml
+++ b/GeaWebMVC/Views/Empresa/Delete.cshtml
@@ -40,8 +40,8 @@
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" />
+        <div class="form-actions no-color col-md-3 col-md-offset-2">
+            <input type="submit" value="Delete" class="btn btn-primary btn-lg" />
         </div>
     }
 </div>
