--- a/GeaWebMVC/Views/Operador/Index.cshtml
+++ b/GeaWebMVC/Views/Operador/Index.cshtml
@@ -5,55 +5,57 @@
 }
 
 
+<div class="col-md-12 col-md-offset-1">
+    <h2>Lista de Operadores</h2>
+    <table class="table" >
 
-<table class="table col-md-12 col-md-offset-1">
 
-    <h2>Listar Operadores</h2>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Empresa.Nome)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Perfil.Tipo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Nome)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Cpf)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Login)
-        </th>
-
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Empresa.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Perfil.Tipo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cpf)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Login)
-            </td>
+            <th>
+                @Html.DisplayName("Empresa")
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Perfil.Tipo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Nome)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Cpf)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Login)
+            </th>
 
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "btn btn-primary " })
-                @Html.ActionLink("Detalhe", "Details", new { id = item.Id }, new { @class = "btn btn-primary " })
-                @Html.ActionLink("Excluir", "Delete", new { id = item.Id }, new { @class = "btn btn-primary " })
-            </td>
+            <th></th>
         </tr>
-    }
 
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Empresa.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Perfil.Tipo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Cpf)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Login)
+                </td>
+
+                <td>
+                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "btn btn-primary  " })
+                    @Html.ActionLink("Detalhe", "Details", new { id = item.Id }, new { @class = "btn btn-primary " })
+                    @Html.ActionLink("Excluir", "Delete", new { id = item.Id }, new { @class = "btn btn-primary  " })
+                </td>
+            </tr>
+        }
+
+    </table>
+</div>
