--- a/GeaWebMVC/Views/Shared/_Layout.cshtml
+++ b/GeaWebMVC/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Empresa <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li>@Html.ActionLink("Listrar", "Index", "Empresa")</li>
+                                <li>@Html.ActionLink("Listar", "Index", "Empresa")</li>
                                 <li role="separator" class="divider"></li>
                                 <li>@Html.ActionLink("Cadastrar", "Create", "Empresa")</li>
 
@@ -44,7 +44,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Faturamento <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li>@Html.ActionLink("Listrar", "Index", "Faturamento")</li>
+                                <li>@Html.ActionLink("Listar", "Index", "Faturamento")</li>
                                 <li role="separator" class="divider"></li>
                                 <li>@Html.ActionLink("Gerar", "Create", "Faturamento")</li>
 
