--- a/GeaWebMVC/Views/Autentication/Login.cshtml
+++ b/GeaWebMVC/Views/Autentication/Login.cshtml
@@ -10,14 +10,16 @@
 
     <div id="containerLogin" class="col-md-4 col-md-offset-3 ">
         <form class="form-signin">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <h2 class="form-signin-heading">Login</h2>
+
             <label for="inputEmail" class="sr-only">Usuario</label>
 
-            @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control", @placeholder = "Usuário" } })
+            @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control input-login", @placeholder = "Usuário" } })
             @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
 
             <label for="inputPassword" class="sr-only">Senha</label>
-            @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", @id = "inputPassword", @placeholder = "Senha" } })
+            @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control input-login form-lg", @id = "inputPassword", @placeholder = "Senha" } })
             @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
 
             <button id="btnlogar" class="btn btn-lg btn-primary btn-block" type="submit">Logar</button>
