--- a/GeaWebMVC/Views/Empresa/Index.cshtml
+++ b/GeaWebMVC/Views/Empresa/Index.cshtml
@@ -4,40 +4,46 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Listar Empresas</h2>
+<div class="col-md-10 col-md-offset-1">
+    <h2>Lista de  Empresas</h2>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nome)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Cnpj)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th></th>
-    </tr>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Nome)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Cnpj)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th></th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cnpj)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Cnpj)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
 
-            @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "btn btn-primary " })
-            @Html.ActionLink("Detalhe", "Details", new { id = item.Id }, new { @class = "btn btn-primary " })
-            @Html.ActionLink("Excluir", "Delete", new { id = item.Id }, new { @class = "btn btn-primary " })
-        </td>
-    </tr>
-}
+                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "btn btn-primary " })
+                    @Html.ActionLink("Detalhe", "Details", new { id = item.Id }, new { @class = "btn btn-primary " })
+                    @Html.ActionLink("Excluir", "Delete", new { id = item.Id }, new { @class = "btn btn-primary " })
+                </td>
+            </tr>
+        }
 
-</table>
+    </table>
+
+
+</div>
+
