--- a/GeaWebMVC/Views/Faturamento/Delete.cshtml
+++ b/GeaWebMVC/Views/Faturamento/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Faturamento</h4>
+<div class=" form-horizontal col-md-8 col-md-offset-2">
+    <h2>Faturamento</h2>
+    <h3>Você tem certeza que deseja deletar ?</h3>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -45,12 +44,12 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-primary" /> 
         </div>
     }
 </div>
