--- a/GeaWebMVC/Views/Operador/Delete.cshtml
+++ b/GeaWebMVC/Views/Operador/Delete.cshtml
@@ -6,9 +6,10 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Operador</h4>
+
+<div class=" form-horizontal col-md-8 col-md-offset-2">
+    <h2>Operador</h2>
+    <h3>Você tem certeza que deseja deletar ?</h3>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -61,12 +62,12 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-primary" />            
         </div>
     }
 </div>
