--- a/GeaWebMVC/Views/Operador/Edit.cshtml
+++ b/GeaWebMVC/Views/Operador/Edit.cshtml
@@ -63,16 +63,13 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <div class="col-md-offset-4 col-md-10">
+                <input type="submit" value="Salvar" class="btn btn-primary btn-lg" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
