--- a/GeaWebMVC/Views/RegistroDeFluxo/MenuRegistroDeFluxo.cshtml
+++ b/GeaWebMVC/Views/RegistroDeFluxo/MenuRegistroDeFluxo.cshtml
@@ -12,7 +12,7 @@
 
         @if (@ViewBag.RegistroDeFluxoId != null)
         {
-            <h2>Código Registro : 25 @ViewBag.RegistroDeFluxoId</h2>
+            <h2>Código Registro : @ViewBag.RegistroDeFluxoId</h2>
         }
     </div>
 
